--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div>
-    <%= submit_tag 'Register' %>
-    <%= link_to 'Back', welcome_path %>
+    <%= submit_tag 'Register', class: 'btn' %>
+    <%= link_to 'Back', welcome_path, class: 'btn' %>
   </div>
 <% end %>
