--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Shards of the Grid</h1>
 <p>Welcome!</p>
 
-<%= link_to 'Login', login_path, class: 'btn btn-primary' %>
-<%= link_to 'Register', register_path, class: 'btn btn-secondary' %>
+<%= link_to 'Login', login_path, class: 'btn' %>
+<%= link_to 'Register', register_path, class: 'btn' %>
