--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Dashboard</h1>
-<p>Welcome to your dashboard, <%= current_user.username %>!</p>
-
-<%= link_to 'Logout', logout_path, method: :delete %>
+<div class="button-container">
+  <%= link_to 'Logout', logout_path, class: 'nav-button' %>
+  <%= link_to 'Servers', servers_path, class: 'nav-button' %>
+  <%= link_to 'Shop', shop_path, class: 'nav-button' %>
+  <%= link_to 'Game', game_path, class: 'nav-button' %>
+</div>
