--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -65,7 +65,7 @@
     color: #fff; /* Button text color */
     font-size: 18px;
     border: none;
-    outline: none;
+    outline: solid;
     cursor: pointer;
 }
 
@@ -81,4 +81,24 @@
 
 .nav-button:hover {
     background-color: #0056b3;
+}
+
+.log-reg-buttons{
+    text-align: center;
+    text-decoration: none;
+    padding: 10px 5px;
+    background-color: #007bff;
+    color: #fff;
+    font-size: 12px;
+    border: none;
+    outline: solid;
+    cursor: pointer;
+}
+
+.log-reg-container{
+    display: flex;
+    flex-direction: row;
+    /*justify-content: center;*/
+    padding: 20px 0;
+    gap: 10px;
 }
