--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,8 @@
 
 <div class="form-container">
 <h1>Shards of the Grid</h1>
-<%= link_to 'Login', login_path, class: 'btn btn-primary' %>
-<%= link_to 'Register', register_path, class: 'btn btn-secondary' %>
+  <div class ="log-reg-container">
+    <%= link_to 'Login', login_path, class: 'log-reg-buttons' %>
+    <%= link_to 'Register', register_path, class: 'log-reg-buttons' %>
+  </div>
 </div>
