--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,7 @@
-
-<div class="form-container">
-<h1>Shards of the Grid</h1>
-  <div class ="log-reg-container">
-    <%= link_to 'Login', login_path, class: 'log-reg-buttons' %>
-    <%= link_to 'Register', register_path, class: 'log-reg-buttons' %>
+<div class="center-container">
+  <h1>Welcome!</h1>
+  <div>
+    <%= link_to 'Login', login_path, class: 'btn' %>
+    <%= link_to 'Register', register_path, class: 'btn' %>
   </div>
 </div>
