--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,12 @@
-<div class="button-container">
-  <%= link_to 'Logout', logout_path, method: :delete, class: 'nav-button' %>
-  <%= link_to 'Servers', servers_path, class: 'nav-button' %>
-  <%= link_to 'Shop', shop_path, class: 'nav-button' %>
-  <%= link_to 'Game', game_path, class: 'nav-button' %>
+<div>
+  <div class="nav">
+    <%= link_to 'Servers', servers_path, class: 'nav-button' %>
+    <%= link_to 'Shop', shop_path, class: 'nav-button' %>
+    <%= link_to 'Game', game_path, class: 'nav-button' %>
+    <%= link_to 'Logout', logout_path, method: :delete, class: 'nav-button' %>
+  </div>
+  <h1 class="center-container">
+    Welcome, <%= @current_user.username %>!
+  </h1>
 </div>
+
