--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -23,7 +23,7 @@
         </div>
 
         <div>
-            <%= submit_tag 'Register' %>
+            <%= submit_tag 'Register', class: "log-reg-buttons" %>
             <%= link_to 'Back', welcome_path %>
         </div>
     <% end %>
