Temporary modification to routes as games and servers will likely need to be merged, will discuss issue in scrum meeting.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,8 +1,8 @@
 <div>
   <div class="nav">
-    <%= link_to 'Servers', servers_path, class: 'nav-button' %>
+    <%= link_to 'Servers', games_path, class: 'nav-button' %>
     <%= link_to 'Shop', shop_path, class: 'nav-button' %>
-    <%= link_to 'Game', game_path, class: 'nav-button' %>
+    <%= link_to 'Game', servers_path, class: 'nav-button' %>
     <%= link_to 'Logout', logout_path, method: :delete, class: 'nav-button' %>
   </div>
   <h1 class="center-container">
