Modified buy button to fit UI better

--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -31,7 +31,7 @@
       </div>
 
       <div class="purchase-button">
-        <button id="purchase" class="shard-button">Buy</button>
+        <button id="purchase" class="btn">Buy</button>
       </div>
 
 
