Modified increment and decrement buttons to fit UI better

--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -11,7 +11,7 @@
     <div class="shards-section">
       <h2>Shards</h2>
       <div class="shard-controls">
-        <button id="decrement" class="shard-button">-</button>
+        <button id="decrement" class="btn">-</button>
         <input
           type="number"
           id="shard-quantity"
@@ -19,7 +19,7 @@
           min="0"
           class="shard-input"
           />
-        <button id="increment" class="shard-button">+</button>
+        <button id="increment" class="btn">+</button>
       </div>
       <div class="currency-selector">
         <label for="currency">Currency:</label>
