--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -190,3 +190,39 @@ footer p {
     background-color: #555;    /* Slightly lighter color on hover */
     color: #ffffff;
 }
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+
+}
+tr{
+    text-decoration-color: #ffffff;
+}
+
+th, td {
+    padding: 12px;
+    border: 1px solid #ddd;
+    text-align: center;
+}
+
+th {
+    background-color: #1e3c72;
+    color: #DADADA;
+}
+
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #1e3c72;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+}
