--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,1 +1,32 @@
-<h1>Game</h1>
+<div class="container">
+  <h1>Game Servers</h1>
+
+  <table>
+    <thead>
+    <tr>
+      <th>Name</th>
+      <th>Host</th>
+      <th>Capacity</th>
+      <th>Join</th>
+    </tr>
+    </thead>
+    <tbody>
+    <% @games.each do |game| %>
+      <tr>
+        <td><%=game.name%></td>
+        <td><%=game.user.username%></td>
+        <td><%= "4/6" %></td>
+        <td>
+          <% if 4 < 6 %>
+            <%= button_to 'Join', logout_path, method: :post %>
+          <% else %>
+            <span>Full</span>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+
+  <%= link_to 'Add Server', logout_path, class: 'button' %>
+</div>
